--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -98,9 +98,19 @@
     height: 50px;
     width: 50px;
     margin: 0 0 0 10px;
+    background-color: black;
 }
 
 .ownerLink > img {
     height: 100%;
     width: 100%;
 }
+
+.darkName {
+  color: black;
+}
+
+.lightMode {
+  color: #eeee(70, 76, 95);
+}
+
