--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .app {
-  background-color: black;
   padding: 20px;
   min-height: 100vh;
   min-width: 100vh;
+}
+
+.darkMode {
+  background-color: black;
+}
+
+.lightMode {
+  background-color: #eeee(70, 76, 95);
 }
 
